--- a/src/runtime/ide.css
+++ b/src/runtime/ide.css
@@ -1,3 +1,11 @@
+/**
+ * Authors: Joseph Hale, Jacob Janes, Rithvik Arun, 
+Sai Nishanth Vaka, and Jacob Hreshchyshyn
+ * Purpose: Styling for the browser based IDE for Codeable
+ * Date: 29 Apr 2022
+ * Version: 0.1.0
+ */
+
 html {
     font-family: 'Courier New', Courier, monospace;
 }
